# wit-kv

./: .gitignore  Cargo.toml  README.md  justfile  kv.wit  mapreduce.wit  test.wit
client/: package-lock.json  package.json  tsconfig.json
client/src/: client.ts  errors.ts  index.ts  types.ts  wit-types.ts
client/test/: client.test.ts
client/ui/: index.html
crates/wit-ast/: Cargo.toml  README.md
crates/wit-ast/bindings/js/: README.md  example.mjs  index.html  package-lock.json  package.json
crates/wit-ast/src/: ast.rs  bindings.rs  lib.rs  value_convert.rs
crates/wit-ast/src/abi/: error.rs  memory.rs  mod.rs  wave_lift.rs
crates/wit-ast/tests/: wave_roundtrip.rs
crates/wit-ast/wit/: witast.wit
crates/wit-kv/: Cargo.toml  kv.wit
crates/wit-kv-abi/: Cargo.toml
crates/wit-kv-abi/src/: lib.rs  memory.rs  val_convert.rs  val_lift.rs  val_lower.rs  wave_lift.rs  wave_lower.rs
crates/wit-kv-cli/: Cargo.toml
crates/wit-kv-cli/src/: main.rs
crates/wit-kv-server/: Cargo.toml
crates/wit-kv-server/src/: main.rs
crates/wit-kv-server/src/server/: config.rs  content.rs  error.rs  logging.rs  mod.rs  state.rs
crates/wit-kv-server/src/server/routes/: kv.rs  mapreduce.rs  mod.rs  types.rs
crates/wit-kv/src/: error.rs  lib.rs  prelude.rs
crates/wit-kv/src/kv/: format.rs  store.rs  version.rs
crates/wit-kv/src/wasm/: error.rs  mod.rs  typed_runner.rs
examples/high-score-filter/: Cargo.toml
examples/high-score-filter/src/: lib.rs
examples/high-score-filter/wit/: mapreduce.wit
examples/identity-map/: Cargo.toml
examples/identity-map/src/: lib.rs
examples/identity-map/wit/: mapreduce.wit
examples/person-filter/: Cargo.toml
examples/person-filter/src/: bindings.rs  lib.rs
examples/point-filter/: Cargo.toml
examples/point-filter/src/: bindings.rs  lib.rs
examples/point-filter/wit/: map.wit
examples/point-to-magnitude/: Cargo.toml
examples/point-to-magnitude/src/: bindings.rs  lib.rs
examples/point-to-magnitude/wit/: map.wit
examples/sum-scores/: Cargo.toml  state.wit
examples/sum-scores/src/: lib.rs
examples/sum-scores/wit/: mapreduce.wit
examples/typed-person-filter/: Cargo.toml
examples/typed-person-filter/src/: lib.rs
examples/typed-person-filter/wit/: typed-map.wit
examples/typed-point-filter/: Cargo.toml
examples/typed-sum-scores/: Cargo.toml
examples/typed-sum-scores/src/: bindings.rs
examples/typed-sum-scores/wit/: typed-reduce.wit
playground/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
playground/resources/: server-dev.toml  server.toml
playground/src/: examples.ts  main.ts  style.css
playground/src/services/: wit-ast-service.ts  wit-kv-service.ts
playground/src/utils/: hexdump.ts  tree-renderer.ts
resources/: bob.wave  shapes.wit  types.wit  wit-kv-server.example.toml
scripts/: test-errors.sh  usage-example.sh
src/: abi.rs  error.rs  lib.rs  logging.rs  main.rs  prelude.rs
src/abi/: buffer.rs  error.rs  memory.rs  mod.rs  val_lower.rs  wave_lift.rs
src/kv/: error.rs  format.rs  mod.rs  store.rs  types.rs  version.rs
src/server/: config.rs  error.rs  logging.rs  mod.rs  state.rs
src/server/routes/: kv.rs  mapreduce.rs  mod.rs  types.rs
src/wasm/: error.rs  map.rs  mod.rs  reduce.rs  runner.rs  typed_runner.rs
tests/: proptest_abi.rs  reference_tests.rs  server_tests.rs  wasmtime_reference.rs
tests/common/: mod.rs
