[package]
name = "wit-kv"
version = "0.1.0"
edition = "2024"
description = "A typed key-value store for WIT values using canonical ABI encoding"
keywords = ["wasm", "wit", "component-model", "key-value", "canonical-abi"]
categories = ["wasm", "encoding", "database"]

[features]
default = ["kv", "wasm"]
# Enable the key-value store module (requires fjall)
kv = ["dep:fjall", "dep:crc32fast"]
# Enable WebAssembly component execution (requires wasmtime)
wasm = ["dep:wasmtime", "dep:wit-component"]
# Enable the CLI binary
cli = ["dep:clap"]
# Enable all features
full = ["kv", "wasm", "cli", "server"]
# Enable the HTTP API server
server = ["kv", "dep:clap", "dep:axum", "dep:axum-extra", "dep:tokio", "dep:toml", "dep:tower-http", "dep:serde", "dep:serde_json", "dep:tempfile", "dep:tracing-subscriber", "dep:tracing"]

[dependencies]
# Core dependencies (always needed)
anyhow = "1"
thiserror = "2"
wit-parser = "0.244"
wasm-wave = { version = "0.244", features = ["wit"] }

# Optional: CLI support
clap = { version = "4", features = ["derive", "env"], optional = true }

# Optional: KV store support
fjall = { version = "3.0.1", optional = true }
crc32fast = { version = "1", optional = true }

# Optional: WASM execution support
wasmtime = { version = "40.0.2", features = ["component-model"], optional = true }
wit-component = { version = "0.244.0", features = ["dummy-module"], optional = true }

# Used in main.rs
once_cell = "1"
axum = { version = "0.8", optional = true }
axum-extra = { version = "0.12", features = ["typed-header"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
toml = { version = "0.9", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tempfile = { version = "3.24.0", optional = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"], optional = true }
tracing = { version = "0.1.44", optional = true }

[dev-dependencies]
proptest = "1"
axum-test = "18"
tempfile = "3"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"

[[bin]]
name = "wit-kv"
required-features = ["cli", "kv", "wasm"]

[[bin]]
name = "wit-kv-server"
path = "src/bin/wit-kv-server.rs"
required-features = ["server"]

[lints.clippy]
# Disallow functions and macros that can panic
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
indexing_slicing = "deny"
