[workspace]
resolver = "2"
members = ["crates/*"]
exclude = [
    "crates/wit-ast",
    "examples/person-filter",
    "examples/point-filter",
    "examples/point-to-magnitude",
    "examples/sum-scores",
    "examples/witast-decoder",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "A typed key-value store for WIT values using canonical ABI encoding"
keywords = ["wasm", "wit", "component-model", "key-value", "canonical-abi"]
categories = ["wasm", "encoding", "database"]

[workspace.dependencies]
# Internal crates
wit-kv-abi = { path = "crates/wit-kv-abi" }
wit-kv = { path = "crates/wit-kv" }

# Core dependencies (always needed)
anyhow = "1"
thiserror = "2"
wit-parser = { version = "0.244", default-features = false }
wasm-wave = { version = "0.244", default-features = false, features = ["wit"] }
wit-bindgen = "0.51"

# Testing
proptest = "1.4"

# CLI support
clap = { version = "4", features = ["derive", "env"] }

# KV store support
fjall = "3.0.1"
crc32fast = "1"

# WASM execution support
wasmtime = { version = "40.0.2", features = ["component-model"] }
wit-component = { version = "0.244.0", features = ["dummy-module"] }

# Server dependencies
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.24.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing = "0.1.44"

[workspace.lints.clippy]
# Disallow functions and macros that can panic
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
indexing_slicing = "deny"
