[package]
name = "wit-kv-server"
version.workspace = true
edition.workspace = true
description = "HTTP server for wit-kv typed key-value store"
keywords = ["wasm", "wit", "component-model", "key-value", "server"]
categories = ["web-programming::http-server"]

[[bin]]
name = "wit-kv-server"
path = "src/main.rs"

[dependencies]
wit-kv = { workspace = true, features = ["kv", "wasm", "logging"] }
axum.workspace = true
tokio.workspace = true
toml.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
clap.workspace = true
anyhow.workspace = true

[lints]
workspace = true
