[package]
name = "wit-kv"
version.workspace = true
edition.workspace = true
description = "A typed key-value store for WIT values using canonical ABI encoding"
keywords = ["wasm", "wit", "component-model", "key-value"]
categories = ["wasm", "database"]

[features]
default = ["kv", "wasm"]
# Enable KV store functionality
kv = ["dep:fjall", "dep:crc32fast"]
# Enable WASM execution for map/reduce operations
wasm = ["dep:wasmtime", "wit-kv-abi/val"]
# Enable tracing-based logging
logging = ["dep:tracing"]

[dependencies]
wit-kv-abi.workspace = true
thiserror.workspace = true
wit-parser.workspace = true
wasm-wave.workspace = true
anyhow.workspace = true

# KV store dependencies (optional)
fjall = { workspace = true, optional = true }
crc32fast = { workspace = true, optional = true }

# WASM execution dependencies (optional)
wasmtime = { workspace = true, optional = true }

# Logging (optional)
tracing = { workspace = true, optional = true }

[lints]
workspace = true
